# termfmt

./: Cargo.toml  README.md
src/: chrono.rs  clap.rs  color.rs  command.rs  data.rs  fmt.rs  layout.rs  lib.rs  output.rs  strategies.rs
src/chrono/: date.rs  delta.rs  time.rs
src/layout/: lines.rs
src/parse/: time.rs
src/strategies/: interactive.rs  logger.rs  plain.rs
