[package]
name = "termfmt"
version = "0.2.2"
edition = "2021"
description = "Opinionated formatting for library primatives with color and outputing to the terminal."
license = "MIT"
repository = "https://github.com/Lukas412/termfmt"

[dependencies]
chrono = "0.4.38"
clap = "4.5.4"
csv = "1.3.0"
eyre = "0.6.12"
serde = "1.0.201"
serde_json = "1.0.117"
